Fix for tags on mobile.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -855,7 +855,7 @@ body.pushable>.pusher {
     }
 
     .course-tag>a {
-        margin-bottom: 1em;
+        margin-bottom: 1em!important;
     }
 
     #course-show {
